--- a/package.json
+++ b/package.json
@@ -13,19 +13,19 @@
     "build": "tsup",
     "biome:ci": "npx biome ci .",
     "biome:fix": "npx @biomejs/biome format --write && npx @biomejs/biome lint --write",
-    "release": "npm run build && changeset publish"
+    "release": "npm run build && changeset publish",
+    "test": "npm run biome:ci && jest"
   },
   "author": "leszekkorzan",
   "license": "ISC",
   "devDependencies": {
-    "@biomejs/biome": "1.8.3",
+    "@biomejs/biome": "1.9.3",
+    "@changesets/cli": "^2.27.8",
     "@types/jest": "^29.5.13",
     "jest": "^29.7.0",
+    "terser": "^5.34.1",
     "ts-jest": "^29.2.5",
-    "tsup": "^8.2.4",
+    "tsup": "^8.3.0",
     "typescript": "^5.6.2"
-  },
-  "dependencies": {
-    "@changesets/cli": "^2.27.8"
   }
 }
