--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,7 @@ jobs:
         with:
           node-version: 18
       - run: npm install
+      - run: npm run test
       - name: Publish to npm
         id: changesets
         uses: changesets/action@v1
